vpc.tf
resource "aws_vpc" "jenkins_vpc" {
  cidr_block = "10.0.0.0/16"
  
  tags = {
    Name = "jenkins_vpc"
  }
}
